# Hodgkin-HuxleyCode

./: .gitignore  CMakeLists.txt  Hodgkin_Huxley.cbp  Hodgkin_Huxley.cscope_file_list  Hodgkin_Huxley.depend  Hodgkin_Huxley.layout  README.md
include/: Agent.h  Agents.h  ChemistryValues.h  Color.h  Compatibility.h  Environment.h  FitnessGraph.h  Food.h  FoodForAgents.h  Graph.h  GraphicsAndUI.h  GraphicsUtilities.h  HH_NeuralNetwork.h  HH_NeuralNetworks.h  HH_Neuron.h  HH_Neurons.h  MathUtilities.h  MembraneGraph.h  MembraneVoltageGraph.h  NN_Connection.h  NN_Connections.h  RecurrentList.h  ResultsAndGraphs.h  ResultsBuffer.h  Simulation.h  Threading.h  TrainingQA.h  TrainingSet.h  Vector.h
settings/: 10_5mA_6_3C_activates_16_3C_spike_activates_with_delay_at_post_synaptic_neuron_only6_3Cactivates.txt  10mA_6_3C_activates_16_3C_spike_notactivated.txt  6_3C_and_16_3Cactivates_post_synaptic_neuron_only6_3C_spike_activates.txt  anode_break_excitation_neuron_1_64445mA_starting_at_10ms_6_301C_ending_at_10ms.txt  anode_break_excitation_neuron_6_301.txt  anode_break_excitation_neuron_6_301_stimulus_1.64445_results_in_warmer_activation_normal_inactivated.txt  anode_break_timing_inactivated.txt  anode_break_timing_lagging.txt  anode_break_timing_leading.txt  increased_spikerate_frequency_excitation.txt  nn_amplification_layer_activity_testing.txt  nn_amplification_layer_activity_testing_6_31C.txt  nn_amplification_layer_activity_testing_with_noise.txt  shorter_thinner_11mA_stimulus_6_3C_16_3C_activates_only_6_3C__at_post_synaptic_neuron.txt
src/: Agent.cpp  Agents.cpp  Food.cpp  (+31 more)
(+121 files in other folders)
